--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <!-- include pokeball  -->
       <img src="news.webp" alt="news" class="news">
 
-      <h1 class="ml-2">Let's redesign the Hacker News website!</h1>
+      <h1 class="ml-2">Let's Redesign the Hacker News website!</h1>
    
     </div>
      <!-- CITATION: button component FlexStart template https://bootstrapmade.com/demo/FlexStart/ -->
